# rubiks-cube

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.h  rubik.cpp  rubik.h  window.cpp
